[tool.poetry]
name = "toyama_api"
version = "0.1.2"
description = "API wrapper for Toyama Switch Controlls"
authors = ["Prasanna Reddy <prasannareddy_ch@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
aiohttp = "^3.11.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
mypy = "^1.14.1"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
